--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ script:
   # Correr test de la aplicacion (unit, integration, etc.)
   - cd djangoapp && python manage.py test && cd ..
   # Chequeo de dependencias
-  - docker pull owasp/dependency-check
-  - mkdir dependency-check-data
-  - docker run -i --volume dependency-check-data:/usr/share/dependency-check/data --volume "$(pwd)/djangoapp":/src owasp/dependency-check --scan /src --project "Test"
+  #- docker pull owasp/dependency-check
+  #- mkdir dependency-check-data
+  #- docker run -i --volume dependency-check-data:/usr/share/dependency-check/data --volume "$(pwd)/djangoapp":/src owasp/dependency-check --scan /src --project "Test"
   # Build del contenedor
   - cd djangoapp && docker build -t django_app_image . && cd ..
 
